# volmesh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  activate_venv.sh  bootstrap.sh  build.sh  todo.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  cmake-single-platform.yml.disabled
apps/: CMakeLists.txt
apps/makesdf/: CMakeLists.txt  makesdf.cpp
apps/maketetmesh/: CMakeLists.txt  maketetmesh.cpp
apps/makevolmesh/: CMakeLists.txt  makevolmesh.cpp
cmake/: FindSphinx.cmake
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  README.rst  conf.py  index.rst
include/volmesh/: aabb.h  basetypes.h  cell.h  cell.tpp  cube.h  customattribute.h  halfedge.h  halfface.h  halfface.tpp  index.h  keys.h  logger.h  mathutils.h  matrixhash.h  mergelist.h  mergevertexlist.h  multikeyhash.h  sampletetmeshes.h  signeddistancefield.h  stlserializer.h  surfacemesh.h  surfacemesh.tpp  tetmesh.h  tetrahedra.h  trianglemesh.h  volmesh.h  volmesh.tpp  voxel.h
scripts/: buildsettings.sh  utils.sh
src/volmesh/: aabb.cpp  cube.cpp  halfedge.cpp  index.cpp  keys.cpp  logger.cpp  mathutils.cpp  mergelist.cpp  mergevertexlist.cpp  sampletetmeshes.cpp  signeddistancefield.cpp  stlserializer.cpp  tetmesh.cpp  tetrahedra.cpp  trianglemesh.cpp  voxel.cpp
test/: CMakeLists.txt  test_mathutils.cpp  test_sdf.cpp  test_tetmesh.cpp  test_tetrahedra.cpp  test_trianglemesh.cpp  test_voxel.cpp
